--- a/Workshop/appsettings.json
+++ b/Workshop/appsettings.json
@@ -9,6 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+  "JwtIssuer": "https://localhost:44346",
+  "JwtAudience": "https://localhost:44346",
+  "JwtExpiryInDays": 1,
   "AllowedHosts": "*"
 }
 
